--- a/index.css
+++ b/index.css
@@ -178,7 +178,7 @@ header{
 }
 
 .parallax1{
-    background: url("parallax1.jpg")
+    background: url("https://images.unsplash.com/photo-1586767003402-8ade266deb64?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80")
     repeat fixed 100%;
     background-size: cover;
 }
